Fix Vercel deployment configuration
- Remove invalid function runtime configuration
- Simplify vercel.json to use Next.js defaults
- Fix build error with function runtimes

--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,5 @@
   "framework": "nextjs",
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
-  "installCommand": "npm install --legacy-peer-deps",
-  "outputDirectory": ".next",
-  "functions": {
-    "app/**/*.tsx": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/$1"
-    }
-  ]
+  "installCommand": "npm install --legacy-peer-deps"
 }
